@@ -1,3 +1,8 @@
+2005-01-31  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* users-conf.in: detect whether to use md5 or not from the pam setup.
+	Fixes #161269. Removed default groups from all distros
+
 2005-01-26  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* time-conf.in: update the correct server status in debian
